closes: #5391 add XB-Untangle-Pkg-Type
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@20450 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/control
+++ b/debian/control
@@ -707,6 +707,7 @@ XB-Display-Name: Phish Blocker
 XB-Untangle-Type: node
 XB-View-Position: 17
 XB-Is-Security: true
+XB-Untangle-Pkg-Type: node
 XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAACXBIWXMAAAsTAAALEwEAmpwY
  AAAABGdBTUEAALGOfPtRkwAAACBjSFJNAAB6JQAAgIMAAPn/AACA6QAAdTAAAOpgAAA6mAAA
  F2+SX8VGAAARDElEQVR42ryZaZCV1Z3Gf+fd7n779srtne6G7gYamk0QlAgijpqQTcxmEhJn
