--- a/downloads/Makefile
+++ b/downloads/Makefile
@@ -32,7 +32,7 @@ tarballs_bz2=ant-contrib-1.0b2.tar.bz2 jaf-1.0.2.tar.bz2 \
 
 zips=ant-pack200.zip javamail-1_3_3_01.zip alloylnf-1_4_4-1.zip \
 	htmlparser1_6_20060319.zip xstream-distribution-1.3-bin.zip \
-	jabsorb-1.2.2-src.zip
+	jabsorb-1.2.2-src.zip yuicompressor-2.4.2.zip
 
 jars=itext-1.3.jar hibernate-client.jar jfreechart-gui.jar \
 	gettext-commons-0.9.1.jar jruby-complete.jar properJavaRDP-1.1.jar \
