Ad Blocker node - initial commit - ad blocker API
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@21195 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/control
+++ b/debian/control
@@ -998,6 +998,62 @@ XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAABGdBTUEAANbY1E9YMg
 Description: Reports
  The Reports product.
 
+Package: untangle-node-adblocker
+Architecture: all
+Depends: untangle-vm, untangle-casing-http
+Conflicts: adblocker-transform
+Provides: adblocker-transform
+Replaces: adblocker-transform
+XB-Display-Name: Ad Blocker
+XB-Untangle-Type: node
+XB-View-Position: 120
+XB-Is-Security: true
+XB-Untangle-Pkg-Type: node
+XB-Desc-Icon: iVBORw0KGgoAAAANSUhEUgAAACoAAAAqCAYAAADFw8lbAAAABGdBTUEAANbY1E9YMgAAABl0RVh0
+ U29mdHdhcmUAQWRvYmUgSW1hZ2VSZWFkeXHJZTwAAAjsSURBVHjaxFlrTFXZFV5XQMEHTx0G0Qgj
+ M1F81EeLwYhYpVLfj3RGRKODUUmDDdUZ08Zg/KGMiRlxnKYq0XS0+mcM6ojiFAXER3V4KCAUiENB
+ lFgVKCAqb3fXtzjneO/lXGTaVHbyhX3W3uec76y9nheLUmriwoULi319fcnLy4sGDx5Mzs7O1B/D
+ ycmJBg4cKMC8q6uLtm3bRszRYvHw8FCpqamy6OLiIhssFgv11xgwYIABJihkJ0+eTM5NTU3U2tpK
+ 8fHx5OfnR+7u7kL2XQ8oByfp5uZGQ4cOFcW9fv2aoqKiZF3OuLOzkx48eEDt7e39TnTIkCE0bNgw
+ MUHIOjo63hDFaGxspLa2NiHanzYKbcJXdK1CiTZEMVpaWoRsfxHFe8EBdonThRlg3oMoBuwCm/pj
+ gBQcGsoCB2gYDmVKVB+enp60fPlyGjNmjFxXV1fT8ePHe+yZMmWK6f2FhYViTo72Zmdn2+yfM2eO
+ eDq0CAd//vy5QVIfKi0tDRIDTFA1NDQo+1FQUKD4hcY+frjqbZw7d04FBAQY+62fiXdYv9N6zJo1
+ S3FIUjNmzFA3btyQ9QH2moAGjx07Jp6Ho7DGpEmTaP/+/W++UItzjrBkyRLKyMgQbWKcPXvWWAsL
+ CzOewx9jyIuKiqimpqZnfLUXREdHc4gYzGGhne7cyacVK1ZQTEwM1dXViiw6erVhDiAKmY65c+cK
+ du3aZcj8/UfS2rVrZf/BgwcN+aJFC413Ll682JAfPnzYPBHYC0JDQ9mQOwRff/0nunDhAp08eZK+
+ +ea4IYdm3zheh4Hr168LEhMT6auvDhryBQsWyP579+5RRcU/RebnN9J4jvU7L1261DeiCLDwOEAP
+ DRiHDh2iiRMnEqdcunjxoqFRfa99pMAeXY7grY/z588b8lWrVsnz5s+fL9dYgxP1iSgbL9/UJtiw
+ IcaQP3r0SNAzlLUZcLTm5uZqyJOTkw15RMQ8TZvd1460aUo0JSWF41i7ICjoQ9q3b5/Dm6FRfS9g
+ PcaPH2/IKyurbD64oKBQ5O+950tbtmyReW1tHaWnp/edKDzu6NGjEnQBeO6JEyckCpglB30foI9x
+ 48aJU+ry4uJim/tOnz5trI0dO1b+QpuOjt1hwN+7dy+5urrS0qVL5RplVlJSEm3atKkHUVRe+uA4
+ a7Our+FDrQdC1tatW21kV65c6b38c7SAEHPmzBl5GQBHSkhIMCXqCHV1dXLP48ePbe7D9a1bt2z2
+ Xr16tfc6oLfFPXv2UHl5OcXFxcn1vHnzxMZ0DdlrFGnzyZMngqdPn9LNmzfpxYsXps/Ozc2l4OBg
+ mVdUVLy9YHnbBjgXcu9nn22T69Wro1jTKUzgpWajb4jaH2fvBUincW9Dw7/fXvn35aGwn2vXrhsO
+ wDm4V2fqy+js7DLu04vjnzN+xfDqi0Z37txJaPRGjBjBcXQDvXz50nAAvfrx8vK2OvqfRvAN0U7j
+ XmSkQNQCjJGM5Yyqt2nU09ODs4W7BOBp06aZBnA9Y3VnJvOA35faU78POR7qeKatPeuLRhHz9Mrm
+ k08+FoIYUVGrjDSJ/up/LbL1Kr6FY2dVfj6FssxbW/sl4zbjVW9Ev/32NMfNn0kB6+zsYlQ++hHd
+ v3/fiJfdGu34r4lm8bt8Ll8mWHw8hNwjcc1Hiey8IIpiz9XR0aNnSUraT8+ePWU76rBBWVkpHTly
+ xCaFWq//lKFKSmgSkzyokUR9lY1CiE8rkucIXB8zfBlTHVX4AGtUcRmmIiMjBf7+/qZ7goKCDNiv
+ O8L7jEv4TsanFoviLCjybCcnpTw8pCtAhb+ZK/xGrvBV933mRP9fcGP8QSP5a4a7Jo+HDEQDA9Vf
+ NKKRTDRPI+ps1oqgr0aWQYuANgJzPTRhjkYMjRvmemNm39Bhv96CWO9FZYoKAt3637R3nkNICgkh
+ rlCIqx+K4ZAYyU4dzXLEkgtmR79u3TpVVVUl8wMHDijOwTLHX87/RiOGRs2sMcM9+n59ZGZkqKEs
+ G85gu1P1jDDt3t/jfjYtFRen+OVKbd6sVEKC4pepbK25CzRr7uDRCPh6TalnIZRud+/epdmzZ0su
+ HzRokFTnugOGh4dLtRUbGysyZBwUJPhZJj4igu6xLA0lHsIQP2sH/81kHHB3xzESIbEg1CEcIlNx
+ 1AnnViUI1ZeZ1yOONjc/p5kzZ9LUqVO4Pn1Eo0eP5p7bQqxpIfzDD7eptPQfNGHCBLkH+5Fp6uvr
+ ZY4PaGl5ZaRV1qZknhBc+PgQd3wUwdO53RpAqpMjF7i4EGuB4xIHJlYY2zSFOcr16emXJStVVz9k
+ UjkSSxsaGqmEQ4oPvyg3N4+JlhmZC2vbt2+n3bt3c/l2W4qY5uYXtHHjRg5pZdTKZMbzvg8Yifwx
+ lJkp1/hxs5CrKMKPcjhFEObULYB9c9ou1uzalCiCeggbd15eHhcj18QEMjMzZW3UqFHyUwv2QNPd
+ RBu4tb4jTRzbqKblZjp16hStWbOGKrhrKNfy91+1d3yv/ZUY+cUX3eTe58Dl59et9e++oznanj87
+ IlpSUkzDh/uwdv7OmiuVuV4zBgYGsFmECtD/62Vaaup5bifSaPr06QbRqqpKsWvrmvQ+ns8I0lIm
+ 0yM+bPoXbLuoiLh5Itqxg0IqK6lLIxjjWKM/ckhp4iK5Rghi/vDhQ6moMF+//lP6/PPt5O3to4Wf
+ Jinb8vPvGHYLcoGBH9DKlStp2bJlNs//bfdPd1Sv5fBOrWoq5ROgL7+kAI6crQwXhpTWbHqmRKHF
+ 3Nwc7h4r+QNrZZ6TkyOejjlkKEwwhyngLxozVO04DcjKy8uYbDObxyiB9bjJ+CM7XzvbLsqbZIY7
+ IgWqMjYrOOHvOAJkMSxsqyn4gHedmazBrqiqgfBwxU6jaj76SDWsX69qOa2q2FilgoNVcVaW+Y9k
+ 73LcRSZkLGKH/REnyfG0lONnPR/5uuRksvDJPrb/abw/B5zrN+guuOXxZRNDd9Zq1QnYEOXj71ey
+ +PfGcHg3h7iLr16RWb+Q1R/2aQ8mqjheqF8wvO3WUPf+R4ABACEcfkAFMtTiAAAAAElFTkSuQmCC
+Description: Ad Blocker
+ The Ad Blocker product.
+
 Package: untangle-base-virus
 Architecture: all
 Depends: untangle-libuvm, untangle-casing-http, untangle-casing-mail
