depend on untangle-webfiltere-init
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@21492 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/debian/control
+++ b/debian/control
@@ -296,7 +296,7 @@ Description: Spyware Blocker
 
 Package: untangle-node-webfilter
 Architecture: all
-Depends: untangle-vm, untangle-casing-http, untangle-base-webfilter
+Depends: untangle-vm, untangle-casing-http, untangle-base-webfilter, untangle-webfilter-init
 Conflicts: httpblocker-transform
 Provides: httpblocker-transform
 Replaces: httpblocker-transform
