disable AuthPAM if loaded
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@22667 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/reports/apache.conf
+++ b/uvm-lib/servlets/reports/apache.conf
@@ -9,6 +9,9 @@ JkMount /reports* uvmWorker
         AuthBasicAuthoritative Off
         AuthUserFile /dev/null
     </IfModule>
+    <IfModule mod_auth_pam.c>
+        AuthPAM_Enabled Off
+    </IfModule>
 
     PythonOption Realm Administrator
     PythonAuthenHandler uvmlogin
