--- a/uvm-lib/servlets/alpaca/apache.conf
+++ b/uvm-lib/servlets/alpaca/apache.conf
@@ -8,6 +8,9 @@ JkMount /alpaca* uvmWorker
         AuthBasicAuthoritative Off
         AuthUserFile /dev/null
     </IfModule>
+    <IfModule mod_auth_pam.c>
+        AuthPAM_Enabled Off
+    </IfModule>
 
     PythonOption Realm Administrator
     PythonAuthenHandler uvmlogin
