--- a/uvm-lib/servlets/setup/apache.conf
+++ b/uvm-lib/servlets/setup/apache.conf
@@ -8,6 +8,9 @@ JkMount /setup* uvmWorker
          AuthBasicAuthoritative Off
          AuthUserFile /dev/null
     </IfModule>
+    <IfModule mod_auth_pam.c>
+        AuthPAM_Enabled Off
+    </IfModule>
 
     PythonOption Realm SetupWizard
     PythonAuthenHandler uvmlogin
