--- a/uvm-lib/servlets/webui/apache.conf
+++ b/uvm-lib/servlets/webui/apache.conf
@@ -8,6 +8,9 @@ JkMount /webui* uvmWorker
          AuthBasicAuthoritative Off
          AuthUserFile /dev/null
     </IfModule>
+    <IfModule mod_auth_pam.c>
+        AuthPAM_Enabled Off
+    </IfModule>
 
     PythonOption Realm Administrator
     PythonOption UseRemoteAccessSettings yes
