--- a/downloads/Makefile
+++ b/downloads/Makefile
@@ -17,7 +17,7 @@ UNZIP=unzip
 tarballs_gz=apache-ant-1.6.5.tar.gz commons-beanutils-1.7.0.tar.gz \
 	commons-digester-1.7.tar.gz cpptasks-1.0b3.tar.gz \
 	hibernate-3.2.4.sp1.tar.gz hibernate-annotations-3.3.0.GA.tar.gz \
-	apache-tomcat-5.5.26.tar.gz jfreechart-1.0.1.tar.gz \
+	apache-tomcat-5.5.26.tar.gz jfreechart-1.0.13.tar.gz \
 	logging-log4j-1.2.14.tar.gz trove-1.0.2.tar.gz xdoclet-lib-1.2.3.tar.gz \
 	bcel-5.2.tar.gz c3p0-0.9.0.4.bin.tar.gz velocity-1.4.tar.gz \
 	jcifs_1.2.9.tar.gz commons-fileupload-1.1.tar.gz commons-io-1.1.tar.gz \
@@ -34,9 +34,8 @@ zips=ant-pack200.zip javamail-1_3_3_01.zip alloylnf-1_4_4-1.zip \
 	htmlparser1_6_20060319.zip xstream-distribution-1.3-bin.zip \
 	jabsorb-1.2.2-src.zip yuicompressor-2.4.2.zip
 
-jars=itext-1.3.jar hibernate-client.jar jfreechart-gui.jar \
-	gettext-commons-0.9.1.jar jruby-complete.jar properJavaRDP-1.1.jar \
-    java-getopt-1.0.12.jar jnlp.jar
+jars=itext-1.3.jar hibernate-client.jar gettext-commons-0.9.1.jar \
+	jruby-complete.jar properJavaRDP-1.1.jar java-getopt-1.0.12.jar jnlp.jar
 
 ###############################################################################
 ###############################################################################
