--- a/uvm-lib/servlets/reports/root/WEB-INF/web.xml
+++ b/uvm-lib/servlets/reports/root/WEB-INF/web.xml
@@ -28,8 +28,8 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.2//EN"
   <display-name>Reports</display-name>
 
   <servlet-mapping>
-    <servlet-name>com.untangle.uvm.reports.jsp.ReportsIndex_jsp</servlet-name>
-    <url-pattern>/archive</url-pattern>
+    <servlet-name>com.untangle.uvm.reports.jsp.index_jsp</servlet-name>
+    <url-pattern>/</url-pattern>
   </servlet-mapping>
 
 </web-app>
