fix welcome page
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@23756 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/reports/root/WEB-INF/web.xml
+++ b/uvm-lib/servlets/reports/root/WEB-INF/web.xml
@@ -27,9 +27,9 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.2//EN"
 
   <display-name>Reports</display-name>
 
-  <servlet-mapping>
-    <servlet-name>com.untangle.uvm.reports.jsp.index_jsp</servlet-name>
-    <url-pattern>/</url-pattern>
-  </servlet-mapping>
-
+  <welcome-file-list>
+    <welcome-file>
+      index.jsp
+    </welcome-file>
+  </welcome-file-list>
 </web-app>
