- Logrotate monit.log. - Monitor apache with monit (so far only mongrel was watched, as we   did not use to have an apache babysitter). - unmonitor early on when calling /etc/init.d/untangle-vm stop. - monitor uvm only every 3 cycles, as it can sometimes be a little   slow to start up. Closes: #6719.
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@24316 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm/hier/etc/untangle/monit.d/uvm_amd64.conf
+++ b/uvm/hier/etc/untangle/monit.d/uvm_amd64.conf
@@ -1,4 +1,4 @@
-check process untangle-vm with pidfile /var/run/uvm.pid
+check process untangle-vm with pidfile /var/run/uvm.pid every 3 cycles
    start program = "/etc/init.d/untangle-vm start"
    stop  program = "/etc/init.d/untangle-vm stop"
    if totalmem > 2.2 GB then restart
