Tell monit that some services can take a little long to start up (Comment: #6940, #6936).
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@24660 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm/hier/etc/untangle/monit.d/uvm_amd64.conf
+++ b/uvm/hier/etc/untangle/monit.d/uvm_amd64.conf
@@ -1,5 +1,5 @@
 check process untangle-vm with pidfile /var/run/uvm.pid every 3 cycles
-   start program = "/etc/init.d/untangle-vm start"
+   start program = "/etc/init.d/untangle-vm start" with timeout 300 seconds
    stop  program = "/etc/init.d/untangle-vm stop"
    if totalmem > 2.2 GB then restart
    depends on gc-log
